--- a/index.html
+++ b/index.html
@@ -7,6 +7,49 @@
 </head>
 <body>
   <div class="main">
+    <!-- Centered content area (left side of the card) -->
+    <div class="content">
+      <header>
+        <h1><span class="flair">Welcome</span></h1>
+      </header>
+
+      <!-- Nav columns -->
+      <nav class="links">
+        <ul class="green">
+          <li class="section-title">Daily</li>
+          <li><a href="https://docs.google.com/spreadsheets/d/1o7UVflc-YgG8DFLHvee0Mv4Ij-raPF-l-GATx-buwtI/edit?pli=1&gid=0#gid=0">Tracking</a></li>
+          <li><a href="https://chatgpt.com/">ChatGPT</a></li>
+          <li><a href="https://www.notion.so/Home-Station-f694799c31ef438e90fb4b02af3b6120">Notion</a></li>
+          <li><a href="https://vault.bitwarden.com/#/">Bitwarden</a></li>
+        </ul>
+
+        <ul class="blue">
+          <li class="section-title">YouTube</li>
+          <li><a href="https://www.youtube.com/">YouTube Home</a></li>
+          <li><a href="https://www.youtube.com/playlist?list=PLGlkTReTM-9NqpIZoZTp5ntRAuwF1PsEq">YouTube Study</a></li>
+          <li><a href="https://www.youtube.com/playlist?list=PLGlkTReTM-9M2lq1LSTP7MobFy78qwwpi">YouTube POV</a></li>
+          <li><a href="https://www.youtube.com/playlist?list=PLGlkTReTM-9Omn1WCNHBaOpn9uHn3e1oh">YouTube Entertainment</a></li>
+        </ul>
+
+        <ul class="yellow">
+          <li class="section-title">Else</li>
+          <li><a href="https://gmail.com/">Gmail</a></li>
+          <li><a href="https://drive.google.com/drive/my-drive">Drive</a></li>
+          <li><a href="https://snapdrop.net/">Snapdrop</a></li>
+          <li><a href="https://github.com/">GitHub</a></li>
+          <li><a href="https://www.netlify.com/">Netlify</a></li>
+          <li><a href="https://www.reddit.com/r/FREEMEDIAHECKYEAH/wiki/video/#wiki_.25B7_streaming_apis">Reddit Movies</a></li>
+        </ul>
+
+        <ul class="red">
+          <li class="section-title">Home</li>
+          <li><a href="#">temp1</a></li>
+          <li><a href="#">temp2</a></li>
+          <li><a href="#">temp3</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <!-- Slideshow column on the right -->
     <div class="image-wrapper">
       <div class="mySlides fade"><img src="assets/imgs/side1.gif"  alt="slide 1"></div>
@@ -36,74 +79,7 @@
       <a class="next" onclick="plusSlides(1)" aria-label="Next slide">&#8734;</a>
     </div>
 
-    <!-- Dots under the slideshow -->
-    <div class="dots">
-      <!-- 23 dots -->
-      <span class="reqdVar" onclick="currentSlide(1)"></span>
-      <span class="reqdVar" onclick="currentSlide(2)"></span>
-      <span class="reqdVar" onclick="currentSlide(3)"></span>
-      <span class="reqdVar" onclick="currentSlide(4)"></span>
-      <span class="reqdVar" onclick="currentSlide(5)"></span>
-      <span class="reqdVar" onclick="currentSlide(6)"></span>
-      <span class="reqdVar" onclick="currentSlide(7)"></span>
-      <span class="reqdVar" onclick="currentSlide(8)"></span>
-      <span class="reqdVar" onclick="currentSlide(9)"></span>
-      <span class="reqdVar" onclick="currentSlide(10)"></span>
-      <span class="reqdVar" onclick="currentSlide(11)"></span>
-      <span class="reqdVar" onclick="currentSlide(12)"></span>
-      <span class="reqdVar" onclick="currentSlide(13)"></span>
-      <span class="reqdVar" onclick="currentSlide(14)"></span>
-      <span class="reqdVar" onclick="currentSlide(15)"></span>
-      <span class="reqdVar" onclick="currentSlide(16)"></span>
-      <span class="reqdVar" onclick="currentSlide(17)"></span>
-      <span class="reqdVar" onclick="currentSlide(18)"></span>
-      <span class="reqdVar" onclick="currentSlide(19)"></span>
-      <span class="reqdVar" onclick="currentSlide(20)"></span>
-      <span class="reqdVar" onclick="currentSlide(21)"></span>
-      <span class="reqdVar" onclick="currentSlide(22)"></span>
-      <span class="reqdVar" onclick="currentSlide(23)"></span>
-    </div>
-
-    <header>
-      <h1><span class="flair">Welcome</span></h1>
-    </header>
-
-    <!-- Nav columns -->
-    <nav class="links">
-      <ul class="green">
-        <li class="section-title">Daily</li>
-        <li><a href="https://docs.google.com/spreadsheets/d/1o7UVflc-YgG8DFLHvee0Mv4Ij-raPF-l-GATx-buwtI/edit?pli=1&gid=0#gid=0">Tracking</a></li>
-        <li><a href="https://chatgpt.com/">ChatGPT</a></li>
-        <li><a href="https://www.notion.so/Home-Station-f694799c31ef438e90fb4b02af3b6120">Notion</a></li>
-        <li><a href="https://vault.bitwarden.com/#/">Bitwarden</a></li>
-      </ul>
-
-      <ul class="blue">
-        <li class="section-title">YouTube</li>
-        <li><a href="https://www.youtube.com/">YouTube Home</a></li>
-        <li><a href="https://www.youtube.com/playlist?list=PLGlkTReTM-9NqpIZoZTp5ntRAuwF1PsEq">YouTube Study</a></li>
-        <li><a href="https://www.youtube.com/playlist?list=PLGlkTReTM-9M2lq1LSTP7MobFy78qwwpi">YouTube POV</a></li>
-        <li><a href="https://www.youtube.com/playlist?list=PLGlkTReTM-9Omn1WCNHBaOpn9uHn3e1oh">YouTube Entertainment</a></li>
-      </ul>
-
-      <ul class="yellow">
-        <li class="section-title">Else</li>
-        <li><a href="https://gmail.com/">Gmail</a></li>
-        <li><a href="https://drive.google.com/drive/my-drive">Drive</a></li>
-        <li><a href="https://snapdrop.net/">Snapdrop</a></li>
-        <li><a href="https://github.com/">GitHub</a></li>
-        <li><a href="https://www.netlify.com/">Netlify</a></li>
-        <li><a href="https://www.reddit.com/r/FREEMEDIAHECKYEAH/wiki/video/#wiki_.25B7_streaming_apis">Reddit Movies</a></li>
-      </ul>
-
-      <ul class="red">
-        <li class="section-title">Home</li>
-        <li><a href="#">temp1</a></li>
-        <li><a href="#">temp2</a></li>
-        <li><a href="#">temp3</a></li>
-      </ul>
-    </nav>
-
+    <!-- Clock -->
     <div id="codes" class="codes"></div>
   </div>
 
@@ -131,17 +107,13 @@
 
     function showSlides(n) {
       const slides = document.getElementsByClassName("mySlides");
-      const dots   = document.getElementsByClassName("reqdVar");
       const total  = slides.length;
 
       if (n > total) slideIndex = 1;
       if (n < 1)     slideIndex = total;
 
       for (let i = 0; i < total; i++) slides[i].style.display = "none";
-      for (let i = 0; i < dots.length; i++) dots[i].classList.remove("active");
-
       slides[slideIndex - 1].style.display = "block";
-      if (dots[slideIndex - 1]) dots[slideIndex - 1].classList.add("active");
     }
 
     function plusSlides(n) {
