--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1><span class="flair">Welcome</span></h1>
         </header>
 
-        <!-- Four equal columns; separators handled by CSS -->
+        <!-- Four equal columns; separators drawn by CSS (not per-list) -->
         <nav class="links">
           <ul class="green">
             <li class="section-title">Daily</li>
@@ -106,11 +106,11 @@
 
     function showSlides(n){
       const slides = document.getElementsByClassName("mySlides");
-      const total = slides.length;
+      const total  = slides.length;
       if (n > total) slideIndex = 1;
-      if (n < 1) slideIndex = total;
-      for (let i=0;i<total;i++) slides[i].style.display = "none";
-      slides[slideIndex-1].style.display = "block";
+      if (n < 1)     slideIndex = total;
+      for (let i = 0; i < total; i++) slides[i].style.display = "none";
+      slides[slideIndex - 1].style.display = "block";
     }
     function plusSlides(n){
       slideIndex += n;
@@ -123,6 +123,25 @@
       localStorage.setItem('slideIndex', String(slideIndex));
     }
     showSlides(slideIndex);
+
+    // Enhancements: arrow keys + auto-advance with hover pause + lazy
+    addEventListener('keydown', (e) => {
+      if (e.key === 'ArrowRight') plusSlides(1);
+      else if (e.key === 'ArrowLeft') plusSlides(-1);
+    });
+    let autoTimer = null;
+    const wrapper = document.querySelector('.image-wrapper');
+    function startAuto(){ stopAuto(); autoTimer = setInterval(()=> plusSlides(1), 8000); }
+    function stopAuto(){ if (autoTimer) { clearInterval(autoTimer); autoTimer = null; } }
+    if (wrapper){
+      wrapper.addEventListener('mouseenter', stopAuto);
+      wrapper.addEventListener('mouseleave', startAuto);
+      startAuto();
+    }
+    document.querySelectorAll('.mySlides img:not(:first-of-type)').forEach(img=>{
+      img.loading = 'lazy';
+      img.decoding = 'async';
+    });
   </script>
 </body>
 </html>
