--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1><span class="flair">Welcome</span></h1>
         </header>
 
-        <!-- Four equal columns; separators drawn by CSS (not per-list) -->
+        <!-- Four equal columns; separators drawn by CSS -->
         <nav class="links">
           <ul class="green">
             <li class="section-title">Daily</li>
