--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
   <div class="main">
-    <!-- LEFT: perfectly centered content -->
+    <!-- LEFT: centered content -->
     <div class="content">
       <div class="content-inner">
         <header>
           <h1><span class="flair">Welcome</span></h1>
         </header>
 
-        <!-- Four equal columns; separators drawn by CSS -->
+        <!-- Four equal columns -->
         <nav class="links">
           <ul class="green">
             <li class="section-title">Daily</li>
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <!-- RIGHT: slideshow pinned -->
+    <!-- RIGHT: slideshow -->
     <div class="image-wrapper">
       <div class="mySlides fade"><img src="assets/imgs/side1.gif"  alt="slide 1"></div>
       <div class="mySlides fade"><img src="assets/imgs/side2.gif"  alt="slide 2"></div>
