--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1><span class="flair">Welcome</span></h1>
         </header>
 
-        <!-- Four equal columns -->
+        <!-- Four equal columns (auto-fit to left pane width) -->
         <nav class="links">
           <ul class="green">
             <li class="section-title">Daily</li>
@@ -124,7 +124,7 @@
     }
     showSlides(slideIndex);
 
-    // Enhancements: arrow keys + auto-advance with hover pause + lazy
+    // Arrow keys + auto-advance with hover pause + lazy
     addEventListener('keydown', (e) => {
       if (e.key === 'ArrowRight') plusSlides(1);
       else if (e.key === 'ArrowLeft') plusSlides(-1);
